Move SimpleLightNCandy to the correct filename, add it to autoloader

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
 	"description" : "No-nonsense templating with lightncandy",
     "require": {
         "zordius/lightncandy": "~0.18"
+    },
+    "autoload" : {
+    	"classmap" : ["SimpleLightNCandy.php"]
     }
 }
